--- a/E-commerce/package.json
+++ b/E-commerce/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "redux-toolkit": "^1.1.2",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
